--- a/Remote/Remote.csproj
+++ b/Remote/Remote.csproj
@@ -57,6 +57,9 @@
     <Compile Include="Data\SessionProvider.cs" />
     <Compile Include="Providers\RDP\RDPSession.cs" />
     <Compile Include="Providers\RDP\RDPSessionProvider.cs" />
+    <Compile Include="Providers\VNC\TightVNCSession.cs" />
+    <Compile Include="Providers\VNC\VNCSession.cs" />
+    <Compile Include="Providers\VNC\VNCSessionProvider.cs" />
     <Compile Include="Providers\WinSCP\WinSCPSession.cs" />
     <Compile Include="Providers\WinSCP\WinSCPSessionProvider.cs" />
     <Compile Include="UI\IconGenerator.cs" />
